[package]
name = "mursten_blocks"
version = "0.1.0"
authors = ["Nikita Zdanovitch <nzdanovitch@gmail.com>"]

[dependencies]
alga = "0.7"
log = "0.4"
midir = "0.5"
mursten = { git = "https://github.com/teglvaerk/mursten.git" }
nalgebra = "0.16"
pretty_env_logger = "0.2"
rand = "0.4"
rustyline = "1.0.0"
reqwest = "0.8.6"
time = "0.1.37"
#cursive = "0.9"

